# QA_guru_python_6_19

./: .gitignore  README.md  pyproject.toml
